# opengl

./: .gitignore  .gitmodules  CMakeLists.txt  OLD_glshader.hpp  gl_camera.hpp  gl_mesh.hpp  gl_model.hpp  gl_render.hpp  gl_shader.hpp  glrender.hpp  glshader.hpp
dependencies/: dependencies_notes.txt
